--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,3 +92,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/NBC_CH3_HW7.HW7_Player.RootComponent",NewName="/Script/NBC_CH3_HW7.HW7_Player.SceneRoot")
